--- a/src/entrypoints/popup/index.html
+++ b/src/entrypoints/popup/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>数据采集插件</title>
+    <title>欢迎</title>
   </head>
   <body>
     <div id="app"></div>
